<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Los tuyos - navegación básica -->
    <item
        android:id="@+id/drawer_home"
        android:title="@string/inicio"
        android:icon="@android:drawable/ic_menu_today" />

    <item
        android:id="@+id/drawer_catalogo"
        android:title="@string/catalogo"
        android:icon="@android:drawable/ic_menu_gallery" />

    <item
        android:id="@+id/drawer_carrito"
        android:title="@string/carrito"
        android:icon="@android:drawable/ic_menu_add" />

    <item
        android:id="@+id/drawer_perfil"
        android:title="@string/perfil"
        android:icon="@android:drawable/ic_menu_myplaces" />

    <!-- Los de la profe -->
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_favoritos"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="Favoritos" />

        <item
            android:id="@+id/nav_admin"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="Gestión Admin"
            android:visible="false" />

        <item
            android:id="@+id/nav_usuarios"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="Usuarios"
            android:visible="false" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="Cerrar sesión" />

    </group>

</menu>