<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="40dp">

    <ImageView
        android:id="@+id/logo_home"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/title_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/textApp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:lineSpacingExtra="3sp"
        android:text="@string/textHome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="23sp" />

    <Button
        android:id="@+id/btn_comienza"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/comienza"
        android:textColor="@color/red"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/tiro_devanagari_hindi"
        android:text="@string/registrate"
        android:textColor="@color/white"
        android:textSize="21sp" />

</LinearLayout>